# megingjord

./: .gitignore  .gitmodules  Cargo.toml  README.md  Trunk.toml
.github/workflows/: gh-pages-from-main.yml  rust.yml
megingjord/: Cargo.toml
megingjord-android/: Cargo.toml
megingjord-android/java/app/: build.gradle
megingjord-android/java/app/src/main/: AndroidManifest.xml
megingjord-android/java/app/src/main/java/ru/styxheim/megingjord/: MainActivity.java
megingjord-android/src/: lib.rs
megingjord-core/: Cargo.toml
megingjord-core/src/terminal/: config.rs  geojson_dispatcher.rs  geojson_exchange.rs  geolocation.rs  local_osm_tiles.rs  mappainter.rs  mod.rs
src/terminal/: config.rs  local_osm_tiles.rs  mappainter.rs  mod.rs
waist/: .gitignore  Cargo.toml
waist/src/: main.rs
