[package]
name = "megingjord"
version = "1.0.0"
authors = ["Noktoborus <noktoborus@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
renderer = { path = "./broken-osm-renderer" }
walkers = { git = "https://github.com/noktoborus/walkers.git", branch = "feature" }
image = "0.24"
log = "0.4"
egui = "0.24"
egui_extras = { version = "0.24", features = ["svg"] }
eframe = "0.24"
env_logger = "0.10"
geographiclib-rs = "0.2.3"
scanf = "1.2.1"
tini = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.66", features = ["Storage", "Window"] }
wasm-bindgen-futures = "0.4"

[profile.release]
debug = true
