[workspace]
members = ["megingjord-core", "megingjord", "megingjord-android", "waist"]
default-members = ["megingjord"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Noktoborus <noktoborus@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Ambitious OSM data viewer"

[workspace.dependencies]
megingjord-core = { path = "megingjord-core" }
eframe = "0.25"
log = "0.4"
web-sys = "0.3.66"
geojson = "0.24.1"

[profile.release]
debug = true
