[package]
name = "megingjord-android"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
megingjord-core = { workspace = true }
walkers = { git = "https://github.com/noktoborus/walkers.git", branch = "feature" }
eframe = { workspace = true, features = ["wgpu", "android-game-activity"] }
log = { workspace = true }
jni = "0.21.1"
ndk-context = "0.1.1"
android_logger = "0.13.3"
egui-winit = "0.24"

[lib]
name = "main"
crate_type = ["cdylib"]
