[package]
name = "megingjord-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
renderer = { path = "../broken-osm-renderer" }
walkers = { git = "https://github.com/noktoborus/walkers.git", branch = "feature" }
log = { workspace = true }
eframe = { workspace = true }
egui_extras = { version = "0.25", features = ["svg"] }
image = "0.24"
egui = "0.25"
geographiclib-rs = "0.2.3"
scanf = "1.2.1"
serde_json = "1.0.111"
serde = "1.0.195"
geojson = { workspace = true }
reqwest = { version = "0.11.23" }
tokio = { version = "1.35.1", features = ["rt"] }
wasm-bindgen-futures = "0.4.40"
hex-rgb = "0.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tini = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Storage", "Window", "Geolocation", "Coordinates", "Position"] }
wasm-bindgen = "0.2.89"
